<resources>
    <string name="app_name">MovieRater</string>
    <string name="name">Name</string>
    <string name="nameHintTitle">Enter the title of movie</string>
    <string name="description">Description</string>
    <string name="descriptionHint">Enter a short description of the movie</string>
    <string name="language">Language</string>
    <string name="englishRB">English</string>
    <string name="chineseRB">Chinese</string>
    <string name="malayRB">Malay</string>
    <string name="tamilRB">Tamil</string>
    <string name="releaseDate">Release date</string>
    <string name="releaseDateHint">Enter release date</string>
    <string name="checkboxText">Not suitable for all audience</string>
    <string name="violenceText">Violence</string>
    <string name="languageUsedText">Language used</string>
    <string name="addMovieText">ADD MOVIE</string>
    <string name="titleTV_rate">Enter your review for the movie : </string>
    <string name="reviewTV_rate">Share your view on the show</string>
    <string name="titleTV_view">Title:</string>
    <string name="overviewTV_view">Overview:</string>
    <string name="languageTV_view">Language:</string>
    <string name="release_date_view">Release date:</string>
    <string name="suitableTV_view">Suitable for children below 13:</string>
</resources>
