<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity_Add">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameHintTitle"
            android:id="@+id/nameET"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionHint"
            android:id="@+id/descriptionET"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
    />
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EnglishLanguage"
                android:text="@string/englishRB"
                android:checked="true"
        />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ChineseLanguage"
                android:text="@string/chineseRB"
        />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/MalayLanguage"
                android:text="@string/malayRB"
        />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TamilLanguage"
                android:text="@string/tamilRB"
        />
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/releaseDate"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/releaseDateHint"
            android:id="@+id/releaseDateET"
            android:inputType="date"
    />
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxCB"
            android:text="@string/checkboxText"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/violenceText"
                android:id="@+id/violenceID"
                android:layout_weight="0.5"
                android:visibility="invisible"
        />
        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languageUsedText"
                android:id="@+id/languageUsedID"
                android:layout_weight="0.5"
                android:visibility="invisible"
        />
    </LinearLayout>

</LinearLayout>